--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "react": "18.2.0",
-    "react-native": "0.73.5",
-    "react-native-gesture-handler": "^2.15.0",
-    "react-native-reanimated": "^3.7.2",
-    "react-native-ui-lib": "^7.17.0"
+    "react-native": "0.73.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
